<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_address">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email">anton@reynikov.ru</string>
    <string name="theme_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use_text">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint">Поиск</string>
    <string name="placeholder">Placeholder</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communicationError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="you_havent_created_any_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="create">Создать</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="confirm_complete_creation_playlist_title">Завершить создание плейлиста?</string>
    <string name="confirm_complete_creation_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="title_button_cancel">Отмена</string>
    <string name="title_button_complete">Завершить</string>
    <string name="toast_creation_text_playlist">Плейлист</string>
    <string name="toast_creation_text_created">создан</string>
    <string name="nothing_found_image_description">изображение "ничего не нашлось"</string>
    <string name="playlist_cover_description">изображение обложки альбома</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="added_in_playlist">Добавлено в плейлист</string>
    <string name="track_has_already_added_to_playlist">Трек уже добавлен в плейлист</string>
    <string name="image_dot_description">точка для разделения текста описания</string>
    <string name="arrow_forward_description">стрелка перехода вперед</string>
    <string name="search_icon_description">иконка поиска</string>
    <string name="communication_error_image_description">изображение ошибка соединения</string>
    <string name="timer_zero">0:00</string>
    <string name="play_button_image_description">изображение кнопки пуск</string>
    <string name="add_playlist_button_image_description">изображение кнопки добавить в плейлист</string>
    <string name="favorite_button_image_description">изображение кнопки добавить в избранное</string>
    <string name="placeholder_cover_image_description">изображение заглушки обложки альбома</string>
    <string name="icon_share_description">иконка поделиться</string>
    <string name="icon_more_description">иконка меню</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="want_to_delete_a_track">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="editing_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete_a_playlist">Хотите удалить плейлист</string>
    <string name="not_tracks_for_share">В этом плейлисте нет списков треков, которыми можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="new_playlist_cover_image_description">место для добавления обложки альбома</string>
    <string name="not_tracks_in_playlist">В этом плейлисте нет треков</string>
</resources>