<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutTrackAttr"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/ivAlbum"
        style="@style/ImageViewCoverItemAttr"
        android:contentDescription="@string/playlist_cover_description" />

    <LinearLayout
        style="@style/LinearLayoutTrackAttr"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTrackName"
            style="@style/TextViewTrackAttr"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="0dp"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            tools:text="@string/placeholder"/>

        <LinearLayout
            style="@style/LinearLayoutTrackAttr">

            <TextView
                android:id="@+id/tvArtistName"
                style="@style/TextViewTrackAttr"
                android:maxWidth="200dp"
                tools:text="@string/placeholder"/>

            <ImageView
                android:layout_marginTop="@dimen/track_item_textView_and_dot_image_layout_marginTop"
                android:layout_marginBottom="@dimen/track_item_textView_and_dot_image_layout_marginBottom"
                android:layout_height="@dimen/track_dot_imageView_layout_height_and_layout_width"
                android:layout_width="@dimen/track_dot_imageView_layout_height_and_layout_width"
                android:src="@drawable/ic_dot"
                android:contentDescription="@string/image_dot_description" />

            <TextView
                android:id="@+id/tvTrackTime"
                style="@style/TextViewTrackAttr"
                tools:text="@string/placeholder"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/track_item_forward_layout_height_and_layout_width"
        android:layout_height="@dimen/track_item_forward_layout_height_and_layout_width"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:paddingStart="@dimen/settings_menu_terms_of_use_imageView_paddingStart_and_paddingEnd"
        android:paddingEnd="@dimen/settings_menu_terms_of_use_imageView_paddingStart_and_paddingEnd"
        android:paddingTop="@dimen/settings_menu_terms_of_use_imageView_paddingTop_and_paddingBottom"
        android:paddingBottom="@dimen/settings_menu_terms_of_use_imageView_paddingTop_and_paddingBottom"
        android:src="@drawable/ic_arrow_forward"
        android:contentDescription="@string/arrow_forward_description" />
</LinearLayout>