<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yp_blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layout_height"
        android:layout_marginTop="@dimen/header_layout_marginTop"
        android:layout_marginStart="@dimen/header_layout_marginStart"
        android:layout_marginEnd="@dimen/header_layout_marginEnd">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/title_layout_marginTop"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/main_title"
            android:textColor="@color/yp_white"
            android:textSize="@dimen/title_textSize" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yp_white"
            android:fontFamily="@font/ys_display_medium"
            android:insetTop="@dimen/button_insetTop"
            android:insetBottom="@dimen/button_insetBottom"
            android:textAllCaps="false"
            android:text="@string/search"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/button_textSize"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_button_iconPadding"
            app:iconTint="@color/yp_black"
            app:cornerRadius="@dimen/button_cornerRadius" />

        <Button
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:insetTop="@dimen/button_insetTop"
            android:insetBottom="@dimen/button_insetBottom"
            android:textAllCaps="false"
            android:backgroundTint="@color/yp_white"
            android:text="@string/media_library"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/button_textSize"
            app:icon="@drawable/ic_media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_button_iconPadding"
            app:iconTint="@color/yp_black"
            app:cornerRadius="@dimen/button_cornerRadius" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_layout_height"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:insetTop="@dimen/button_insetTop"
            android:insetBottom="@dimen/button_insetBottom"
            android:textAllCaps="false"
            android:backgroundTint="@color/yp_white"
            android:text="@string/settings"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/button_textSize"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_button_iconPadding"
            app:iconTint="@color/yp_black"
            app:cornerRadius="@dimen/button_cornerRadius" />

    </LinearLayout>
</LinearLayout>